@@ -1,3 +1,7 @@
+[B]2.3.0[/B]
+- Utilize function cache instead of traditional get
+- Make youtube API key as text type instead of bytes for Kodi 19+
+
 [B]2.2.2[/B]
 - Fix Alpha CY vod resolver
 
